--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,28 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-    <activity android:name="com.ennjapps.yesms.Activity.SmsListActivity" android:launchMode="singleTop">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+    <activity android:name="com.ennjapps.yesms.Activity.SmsListActivity"
+        android:label="@string/app_name"
+        android:theme="@style/MyTheme">
+
     </activity>
-    <activity android:name="com.ennjapps.yesms.Activity.AddSmsActivity" />
-    <activity android:name="com.ennjapps.yesms.Activity.SmsSchedulerPreferenceActivity" />
+    <activity android:name="com.ennjapps.yesms.Activity.AddSmsActivity"
+        android:parentActivityName=".Activity.SmsListActivity"
+        android:label="@string/title_activity_bucket">
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.ennjapps.yesms.Activity.SmsListActivity" />
+    </activity>
+        <activity
+            android:name="com.ennjapps.yesms.Activity.FirstTimeLogin"
+            android:label="@string/title_activity_bucket">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     <receiver android:name="com.ennjapps.yesms.BootReceiver" android:exported="false">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
